# dto

./: .gitignore  README.md  pyproject.toml
monitoring/: go.mod  go.sum
monitoring/api/metrics/: metrics.pb.go  metrics.proto  metrics_grpc.pb.go
monitoring/cmd/main/: main.go
monitoring/pkg/metrics/: server.go
src/dto/: __init__.py  dataset_utils.py  distributed_trainer.py
src/examples/: data_loading_example.py  framework_example.py  local_training.py  simple_net.py
terraform/examples/: deploy.sh  hpc.tf  provider.tf
terraform/modules/horovod-hpc/: locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/horovod-hpc/scripts/: cluster-setup.sh  setup.sh
